--- a/Terraform/EKS/kubernetes_files/PodScaler.yaml
+++ b/Terraform/EKS/kubernetes_files/PodScaler.yaml
@@ -14,7 +14,7 @@ spec:
   triggers:
     - type: cpu
       metadata:
-        metricType: Utilization
+        type: Utilization
         value: "70"
 
     - type: prometheus
@@ -30,5 +30,6 @@ spec:
         metricName: http_latency_p95
         query: histogram_quantile(0.95, sum(rate(http_server_requests_seconds_bucket{app="java-app"}[5m])) by (le))
         threshold: "0.5"
+"
 
 
