--- a/Terraform/EKS/kubernetes_files/PodScaler.yaml
+++ b/Terraform/EKS/kubernetes_files/PodScaler.yaml
@@ -11,20 +11,13 @@ spec:
   minReplicaCount: 2
   maxReplicaCount: 30
   pollingInterval: 30
-  cooldownPeriod: 60
   triggers:
     - type: prometheus
       metadata:
-        serverAddress: http://prometheus-server.monitoring.svc.cluster.local:9090
+        serverAddress: http://prometheus-operated.monitoring.svc.cluster.local:9090
         metricName: requests_per_second
         query: sum(rate(http_server_requests_seconds_count{app="java-app"}[1m]))
         threshold: "100"
-    - type: prometheus
-      metadata:
-        serverAddress: http://prometheus-server.monitoring.svc.cluster.local:9090
-        metricName: http_latency_p95
-        query: histogram_quantile(0.95, sum(rate(http_server_requests_seconds_bucket{app="java-app"}[5m])) by (le))
-        threshold: "0.5"
 
 
 
