--- a/APPLICATION/frontend/src/main/resources/application.properties
+++ b/APPLICATION/frontend/src/main/resources/application.properties
@@ -14,3 +14,14 @@ management.metrics.export.prometheus.enabled=true
 spring.security.jdbc.initialize-schema=never
 spring.datasource.initialize=false
 spring.sql.init.mode=never
+
+# HikariCP Connection Pool Configuration
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.pool-name=HikariPool-1
+spring.datasource.hikari.auto-commit=true
+spring.datasource.hikari.leak-detection-threshold=15000
+
